force-app/main/default/objects/Case_s_Wrong_Type_For_Support__c/Case_s_Wrong_Type_For_Support__c.object-meta.xml
<CustomObject>
    <description>Cases Logged in the last 7 days with the wrong case type *Support should be escalation)</description>
    <label>Case&apos;s Wrong Type For Support</label>
    <nameField>
        <label>Case&apos;s Wrong Type For Support Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case&apos;s Wrong Type For Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>