force-app/main/default/objects/Case_s_Wrong_Type_For_Support__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>