force-app/main/default/objects/Case_s_Wrong_Type_For_Support__c/fields/Case_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_s_Wrong_Type_For_Support1</relationshipName>
    <type>Lookup</type>
</CustomField>