force-app/main/default/objects/Case_s_Wrong_Type_For_Support__c/fields/Original_Case__c.field-meta.xml
<CustomField>
    <fullName>Original_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case</description>
    <label>Original Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case&apos;s Wrong Type For Support</relationshipLabel>
    <relationshipName>Case_s_Wrong_Type_For_Support</relationshipName>
    <type>Lookup</type>
</CustomField>